--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,7 +42,7 @@
         player = new YT.Player('player', {
           height: '390',
           width: '640',
-          videoId: 'zecnwqXe850',
+          videoId: '<%=url%>',
           playerVars: {
             'playsinline': 1,
             'controls': 0,
